Get rid of insights on h2

--- a/idf_component.yml
+++ b/idf_component.yml
@@ -55,7 +55,7 @@ dependencies:
   espressif/esp_insights:
     version: "^1.0.1"
     rules:
-      - if: "target != esp32c2"
+      - if: "target != esp32c2 && target != esp32h2"
   espressif/qrcode:
     version: "^0.1.0~1"
     rules:
