--- a/idf_component.yml
+++ b/idf_component.yml
@@ -35,31 +35,38 @@ dependencies:
   espressif/esp-zboss-lib:
     version: "^1.0.1"
     rules:
-      - if: "target != esp32c2 && target != esp32h2"
+      - if: "target != esp32c2"
+      - if: "target != esp32h2"
   espressif/esp-zigbee-lib:
     version: "^1.0.1"
     rules:
-      - if: "target != esp32c2 && target != esp32h2"
+      - if: "target != esp32c2"
+      - if: "target != esp32h2"
   esp-dsp:
     version: "^1.3.4"
     rules:
-      - if: "target != esp32c2 && target != esp32h2"
+      - if: "target != esp32c2"
+      - if: "target != esp32h2"
   espressif/esp_rainmaker:
     version: "^1.0.0"
     rules:
-      - if: "target != esp32c2 && target != esp32h2"
+      - if: "target != esp32c2"
+      - if: "target != esp32h2"
   espressif/rmaker_common:
     version: "^1.4.3"
     rules:
-      - if: "target != esp32c2 && target != esp32h2"
+      - if: "target != esp32c2"
+      - if: "target != esp32h2"
   espressif/esp_insights:
     version: "^1.0.1"
     rules:
-      - if: "target != esp32c2 && target != esp32h2"
+      - if: "target != esp32c2"
+      - if: "target != esp32h2"
   espressif/qrcode:
     version: "^0.1.0~1"
     rules:
-      - if: "target != esp32c2 && target != esp32h2"
+      - if: "target != esp32c2"
+      - if: "target != esp32h2"
   joltwallet/littlefs: "^1.10.2"
   espressif/esp-sr:
     version: "^1.4.2"
