--- a/idf_component.yml
+++ b/idf_component.yml
@@ -71,10 +71,10 @@ dependencies:
       - if: "target != esp32c2"
       - if: "target != esp32h2"
   joltwallet/littlefs: "^1.10.2"
-  espressif/esp-sr:
-    version: "^1.4.2"
-    rules:
-      - if: "target in [esp32s3]"
+  #espressif/esp-sr:
+  #  version: "^1.4.2"
+  #  rules:
+  #    - if: "target in [esp32s3]"
 examples:
   - path: idf_component_examples/
 
